--- a/tests/integration/targets/vmware_migrate_vmk/tasks/main.yml
+++ b/tests/integration/targets/vmware_migrate_vmk/tasks/main.yml
@@ -95,9 +95,11 @@
             username: "{{ vcenter_username }}"
             password: "{{ vcenter_password }}"
             validate_certs: false
-            datacenter: "{{ dc1 }}"
-            switch: "{{ dvswitch1 }}"
-            uplink_quantity: 1
+            datacenter_name: "{{ dc1 }}"
+            switch_name: "{{ dvswitch1 }}"
+            switch_version: 6.5.0
+            uplink_quantity: 2
+            state: present
           register: create_new_dvswitch_result
 
         - assert:
@@ -112,6 +114,7 @@
             validate_certs: false
             esxi_hostname: "{{ esxi1 }}"
             switch_name: "{{ dvswitch1 }}"
+            state: present
           register: add_esxi_host_dvswitch_result
 
         - assert:
