vmware_dvswitch: correctly add contact information
* Add contact to vmware_dvswitch integration test
* Add missing " in integration test

Fixes: #608

Signed-off-by: Abhijeet Kasurde <akasurde@redhat.com>

--- a/tests/integration/targets/vmware_dvswitch/tasks/main.yml
+++ b/tests/integration/targets/vmware_dvswitch/tasks/main.yml
@@ -16,6 +16,9 @@
     password: "{{ vcenter_password }}"
     datacenter_name: "{{ dc1 }}"
     state: present
+    contact:
+      name: admin
+      description: some_description
     switch_name: dvswitch_0001
     mtu: 9000
     uplink_quantity: 2
