--- a/tests/integration/targets/vmware_host_iscsi/tasks/iscsi_module_test_tasks.yml
+++ b/tests/integration/targets/vmware_host_iscsi/tasks/iscsi_module_test_tasks.yml
@@ -46,6 +46,59 @@
     that:
       - enable_iscsi_idempotency_check_result.changed is sameas false
 
+- name: Update a name for iSCSI of ESXi with check_mode
+  vmware_host_iscsi:
+    hostname: "{{ hostname }}"
+    username: "{{ username }}"
+    password: "{{ password }}"
+    validate_certs: false
+    esxi_hostname: "{{ esxi1 }}"
+    iscsi_config:
+      iscsi_name: iqn.1998-01.com.vmware:example-012345
+      vmhba_name: "{{ vmhba_name }}"
+    state: present
+  check_mode: true
+  register: update_iscsi_name_check_mode_result
+
+- assert:
+    that:
+      - update_iscsi_name_check_mode_result.changed is sameas true
+
+- name: Update a name for iSCSI of ESXi
+  vmware_host_iscsi:
+    hostname: "{{ hostname }}"
+    username: "{{ username }}"
+    password: "{{ password }}"
+    validate_certs: false
+    esxi_hostname: "{{ esxi1 }}"
+    iscsi_config:
+      iscsi_name: iqn.1998-01.com.vmware:example-012345
+      vmhba_name: "{{ vmhba_name }}"
+    state: present
+  register: update_iscsi_name_result
+
+- assert:
+    that:
+      - update_iscsi_name_result.changed is sameas true
+      - update_iscsi_name_result.iscsi_properties.iscsi_name == 'iqn.1998-01.com.vmware:example-012345'
+
+- name: Update a name for iSCSI of ESXi (idempotency check)
+  vmware_host_iscsi:
+    hostname: "{{ hostname }}"
+    username: "{{ username }}"
+    password: "{{ password }}"
+    validate_certs: false
+    esxi_hostname: "{{ esxi1 }}"
+    iscsi_config:
+      iscsi_name: iqn.1998-01.com.vmware:example-012345
+      vmhba_name: "{{ vmhba_name }}"
+    state: present
+  register: update_iscsi_name_idempotency_check_result
+
+- assert:
+    that:
+      - update_iscsi_name_idempotency_check_result.changed is sameas false
+
 - name: Update an alias for iSCSI of ESXi with check_mode
   vmware_host_iscsi:
     hostname: "{{ hostname }}"
