--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,7 @@ commands = collection_prep_add_docs -p .
 
 [testenv:antsibull-changelog]
 deps =
+  ansible
   antsibull-changelog
 commands =
   antsibull-changelog {posargs}
