--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -72,6 +72,7 @@ action_groups:
   - vmware_guest_tools_info
   - vmware_guest_tools_upgrade
   - vmware_guest_tools_wait
+  - vmware_guest_vgpu
   - vmware_guest_video
   - vmware_guest_vnc
   - vmware_host
