instant clone module
code review comments

test fixes

test issues 2

comments resolved

requested changes

alphabetical corrections

suggested changes

fix tox error

skip the test case for govcsim

deleted empty yaml file

fix code review comments - 3

update version to 1.9.0

--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -60,6 +60,7 @@ action_groups:
   - vmware_guest_file_operation
   - vmware_guest_find
   - vmware_guest_info
+  - vmware_guest_instant_clone 
   - vmware_guest_move
   - vmware_guest_network
   - vmware_guest_powerstate
