update changelog file

--- a/changelogs/fragments/693-vmware_guest_register_operation.yml
+++ b/changelogs/fragments/693-vmware_guest_register_operation.yml
@@ -1,2 +1,2 @@
 bugfixes:
-  - vmware_guest_register_operation - fix an issue that an error has been occurring when not specifying a datacenter name (https://github.com/ansible-collections/community.vmware/pull/693).
+  - vmware_guest_register_operation - fixed an issue that an error has been occurring when not specifying a datacenter name (https://github.com/ansible-collections/community.vmware/pull/693).
