--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -566,3 +566,45 @@ releases:
       name: vmware_first_class_disk
       namespace: ''
     release_date: '2021-02-01'
+  1.8.0:
+    changes:
+      bugfixes:
+      - vcenter_license - fixed a bug that the license doesn't assign in VCSA 7.0u1c
+        (https://github.com/ansible-collections/community.vmware/pull/643).
+      - vmware - fixed an issue that a port group name doesn't compare correctly in
+        the find_network_by_name function (https://github.com/ansible-collections/community.vmware/pull/661).
+      - vmware_category - append namespace to associable types (https://github.com/ansible-collections/community.vmware/issues/579).
+      - vmware_cluster_ha - fix enabling APD or PDL response (https://github.com/ansible-collections/community.vmware/issues/676).
+      - vmware_cluster_info - return VSAN status correctly (https://github.com/ansible-collections/community.vmware/issues/673).
+      - vmware_deploy_ovf - fixed an issue that an error message doesn't show when
+        not finding a port group name (https://github.com/ansible-collections/community.vmware/pull/661).
+      - vmware_dvs_portgroup - fixed the issue that the VLAN configuration isn't compared
+        correctly in the module (https://github.com/ansible-collections/community.vmware/pull/638).
+      - vmware_dvs_portgroup_find - fixed to decode the special characters URL-encoded
+        in the dvs port group name (https://github.com/ansible-collections/community.vmware/pull/648).
+      - vmware_dvs_portgroup_info - fixed to decode the special characters URL-encoded
+        in the dvs port group name (https://github.com/ansible-collections/community.vmware/pull/648).
+      - vmware_guest - add support for ``advanced settings`` in vmware_guest (https://github.com/ansible-collections/community.vmware/issues/602).
+      - vmware_guest_register_operation - fixed an issue that an error has been occurring
+        when not specifying a datacenter name (https://github.com/ansible-collections/community.vmware/pull/693).
+      - vmware_vm_storage_policy - fixed an issue that an error for pyvmomi(SDK) occurred
+        when a tag or category doesn't exist (https://github.com/ansible-collections/community.vmware/pull/682).
+      minor_changes:
+      - Define sub-options of disk in argument_spec (https://github.com/ansible-collections/community.vmware/pull/640).
+      - vmware_guest - Remove unnecessary hardware version check (https://github.com/ansible-collections/community.vmware/issues/636).
+      - vmware_vcenter_settings - supported the diff mode (https://github.com/ansible-collections/community.vmware/pull/641).
+    fragments:
+    - 579_vmware_category.yml
+    - 602_vmware_guest.yml
+    - 636_vmware_guest.yml
+    - 638-vmware_dvs_portgroup.yml
+    - 640-vmware_guest-disk_suboptions.yml
+    - 641-vmware_vcenter_settings.yml
+    - 643-vcenter_license.yml
+    - 648-vmware_dvs_portgroup_find_info.yml
+    - 661-vmware_deploy_ovf_and_vmware.yml
+    - 673-vmware_cluster_info.yml
+    - 676_vmware_cluster_ha.yml
+    - 682-vmware_vm_storage_policy.yml
+    - 693-vmware_guest_register_operation.yml
+    release_date: '2021-03-05'
