--- a/tests/integration/targets/vmware_host_iscsi_info/tasks/iscsi_info_module_test_tasks.yml
+++ b/tests/integration/targets/vmware_host_iscsi_info/tasks/iscsi_info_module_test_tasks.yml
@@ -71,6 +71,7 @@
       - iscsi_info_result.iscsi_properties.iscsi_static_targets[0].iscsi_name == 'iqn.2011-08.com.xxxxxxx:as6104t-8c3e9d.target001'
       - iscsi_info_result.iscsi_properties.port_bind[0] == 'vmk0'
       - iscsi_info_result.iscsi_properties.vmhba_name is defined
+      - iscsi_info_result.detected_iscsi_drives is defined
 
 - name: Remove dynamic and static targets iSCSI config from ESXi
   vmware_host_iscsi:
