--- a/tests/integration/targets/vmware_host_iscsi_info/tasks/iscsi_info_module_test_tasks.yml
+++ b/tests/integration/targets/vmware_host_iscsi_info/tasks/iscsi_info_module_test_tasks.yml
@@ -110,3 +110,17 @@
 - assert:
     that:
       - disable_iscsi_result.changed is sameas true
+
+- name: Gather iSCSI configuration when ESXi host with iSCSI disabled
+  vmware_host_iscsi_info:
+    hostname: "{{ hostname }}"
+    username: "{{ username }}"
+    password: "{{ password }}"
+    validate_certs: false
+    esxi_hostname: "{{ esxi1 }}"
+  register: dsabled_iscsi_info_result
+
+- assert:
+    that:
+      - dsabled_iscsi_info_result.iscsi_properties.iscsi_enabled is sameas false
+      - dsabled_iscsi_info_result.detected_iscsi_drives is defined
