--- a/tests/integration/targets/vmware_guest_storage_policy/tasks/main.yml
+++ b/tests/integration/targets/vmware_guest_storage_policy/tasks/main.yml
@@ -15,6 +15,7 @@
         hostname: "{{ vcenter_hostname }}"
         username: "{{ vcenter_username }}"
         password: "{{ vcenter_password }}"
+        validate_certs: false
       register: existing_profiles
 
     - name: "Setup: Create category"
