--- a/changelogs/fragments/745-vmware_guest_instant_clone.yml
+++ b/changelogs/fragments/745-vmware_guest_instant_clone.yml
@@ -1,2 +1,2 @@
 minor_changes:
-  - vmware_guest_instant_clone: - supported esxi_hostname parameter as an alias (https://github.com/ansible-collections/community.vmware/pull/745).
+  - vmware_guest_instant_clone - supported esxi_hostname parameter as an alias (https://github.com/ansible-collections/community.vmware/pull/745).
