--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -111,6 +111,7 @@ action_groups:
   - vmware_host_snmp
   - vmware_host_sriov
   - vmware_host_ssl_info
+  - vmware_host_tcpip_stacks
   - vmware_host_vmhba_info
   - vmware_host_vmnic_info
   - vmware_local_role_info
