--- a/tests/integration/targets/vmware_cluster_ha/tasks/main.yml
+++ b/tests/integration/targets/vmware_cluster_ha/tasks/main.yml
@@ -32,6 +32,22 @@
     that:
       - enable_ha_result.changed
 
+- name: Disable HA
+  vmware_cluster_ha:
+    validate_certs: false
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    datacenter_name: "{{ dc1 }}"
+    cluster_name: test_cluster_ha
+    enable_ha: false
+  register: disable_ha_result
+
+- name: Ensure HA is disabled
+  assert:
+    that:
+      - disable_ha_result.changed
+
 - when: vcsim is not defined
   block:
   - name: Change APD response to "restartAggressive" (check-mode)
